--- a/source/index.html
+++ b/source/index.html
@@ -14,17 +14,62 @@
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--active">
-            <a>Главная</a>
+            <a class="main-nav__link main-nav__link--active">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a href="catalog.html">Каталог продукции</a>
+            <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a href="form.html">Подбор программы</a>
+            <a class="main-nav__link" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
     </header>
+
+    <main class="page-main">
+      <h1 class="visually-hidden">Cat Energy - магазин питания для котов</h1>
+
+      <section class="programs">
+        <header class="programs__header">
+            <h2 class="programs__title">Функциональное питание для котов</h2>
+            <p class="programs__slogan">Занялся собой? Займись котом!</p>
+            <a class="programs__form-link" href="form.html">Подобрать программу</a>
+        </header>
+        <section class="programs__list program-types">
+          <h2 class="visually-hidden">Программы питания для котов</h2>
+          <ul class="program-types__list">
+            <li class="program-types__item program-types__item--loss">
+              <h3 class="program-types__title">Похудение</h3>
+              <p class="program-types__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+              <a class="program-types__link" href="catalog-slim.html">Каталог Slim</a>
+            </li>
+            <li class="program-types__item program-types__item--mass">
+              <h3 class="program-types__title">Набор массы</h3>
+              <p class="program-types__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+              <a class="program-types__link" href="catalog-pro.html">Каталог Pro</a>
+            </li>
+          </ul>
+        </section>
+      </section>
+
+      <section class="features">
+        <h2 class="features__title">Как это работает</h2>
+        <ul class="features__list">
+          <li class="features__item features__item--nutrients">
+            <p class="features__text">Функциональное питание содержит только полезные питательные вещества.</p>
+          </li>
+          <li class="features__item features__item--powder">
+            <p class="features__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+          </li>
+          <li class="features__item features__item--eating">
+            <p class="features__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+          </li>
+          <li class="features__item features__item--month">
+             <p class="features__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+          </li>
+        </ul>
+      </section>
+    </main>
 
   </body>
 </html>
