--- a/source/index.html
+++ b/source/index.html
@@ -7,8 +7,8 @@
   <body>
 
     <header class="page-header">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип Cat Energy">
+      <a class="page-header__logo logo-header">
+        <img class="page-header__logo-image" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип компании Cat Energy">
       </a>
       <nav class="page-header__nav main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -33,7 +33,7 @@
         <header class="programs__header">
             <h2 class="programs__title">Функциональное питание для котов</h2>
             <p class="programs__slogan">Занялся собой? Займись котом!</p>
-            <a class="programs__form-link" href="form.html">Подобрать программу</a>
+            <a class="programs__form-link button" href="form.html">Подобрать программу</a>
         </header>
         <section class="programs__list program-types">
           <h2 class="visually-hidden">Программы питания для котов</h2>
@@ -69,7 +69,48 @@
           </li>
         </ul>
       </section>
+
+      <section class="example">
+        <h2 class="example__title">Живой пример</h2>
+        <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+      </section>
     </main>
 
+    <footer class="page-footer">
+      <h2 class="visually-hidden">Контакты</h2>
+      <div class="page-footer__contacts contacts">
+        <p class="contacts__text">Приглашаем к сотрудничеству дилеров!</p>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </div>
+
+      <div class="page-footer__map">
+        <img src="img/map.png" width="320" height="400" alt="Местонахождение магазина на карте">
+      </div>
+
+      <a class="page-footer__logo logo-footer">
+        <img class="page-footer__logo-image" width="128" height="24" src="img/footer-logo.svg" alt="Логотип компании Cat Energy">
+      </a>
+
+      <div class="page-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="#vkontakte">Мы в Вконтакте</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--instagram" href="#instagram">Мы в инстаграме</a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--facebook" href="#facebook">Мы в Фейсбуке</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="page-footer__copyright copyright">
+        <a href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <a href="https://htmlacademy.ru/intensive/adaptive">
+          <img src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
+        </a>
+      </div>
+    </footer>
   </body>
 </html>
