Разметка каталога. Карточки товаров

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -27,8 +27,163 @@
     </header>
 
     <main class="page-main">
-
-
+      <section class="catalog">
+        <h1 class="catalog__title">Каталог продукции</h1>
+        <ul class="catalog__list">
+          <li class="catalog__item item">
+            <a class="item__link" href="#item">
+              <img class="item__picture" src="img/catalog1.img" width="140" height="144" alt="Cat Energy PRO 500 г">
+              <span class="item__caption">Cat Energy PRO 500 г</span>
+            </a>
+            <table class="item__table table">
+              <tr>
+                <td class="table__parameter">Объем</td>
+                <td class="table__value">500 г</td>
+              </tr>
+              <tr>
+                <td class="table__parameter">Вкус</td>
+                <td class="table__value">Курица</td>
+              </tr>
+              <tr>
+                <td class="table__parameter">Цена</td>
+                <td class="table__value">700 Р.</td>
+              </tr>
+            </table>
+            <a class="item__order button" href="#item-basket">Заказать</a>
+          </li>
+          <li class="catalog__item item">
+            <a class="item__link" href="#item">
+              <img class="item__picture" src="img/catalog2.img" width="140" height="144" alt="Cat Energy PRO 1000 г">
+              <span class="item__caption">Cat Energy PRO 1000 г</span>
+            </a>
+            <table class="item__table table">
+              <tr>
+                <td class="table__parameter">Объем</td>
+                <td class="table__value">1000 г</td>
+              </tr>
+              <tr>
+                <td class="table__parameter">Вкус</td>
+                <td class="table__value">Курица</td>
+              </tr>
+              <tr>
+                <td class="table__parameter">Цена</td>
+                <td class="table__value">1000 Р.</td>
+              </tr>
+            </table>
+            <a class="item__order button" href="#item-basket">Заказать</a>
+          </li>
+          <li class="catalog__item item">
+            <a class="item__link" href="#item">
+              <img class="item__picture" src="img/catalog3.img" width="140" height="144" alt="Cat Energy PRO 500 г">
+              <span class="item__caption">Cat Energy PRO 500 г</span>
+            </a>
+            <table class="item__table table">
+              <tr>
+                <td class="table__parameter">Объем</td>
+                <td class="table__value">500 г</td>
+              </tr>
+              <tr>
+                <td class="table__parameter">Вкус</td>
+                <td class="table__value">Рыба</td>
+              </tr>
+              <tr>
+                <td class="table__parameter">Цена</td>
+                <td class="table__value">700 Р.</td>
+              </tr>
+            </table>
+            <a class="item__order button" href="#item-basket">Заказать</a>
+          </li>
+          <li class="catalog__item item">
+            <a class="item__link" href="#item">
+              <img class="item__picture" src="img/catalog4.img" width="140" height="144" alt="Cat Energy PRO 1000 г">
+              <span class="item__caption">Cat Energy PRO 1000 г</span>
+            </a>
+            <table class="item__table table">
+              <tr>
+                <td class="table__parameter">Объем</td>
+                <td class="table__value">1000 г</td>
+              </tr>
+              <tr>
+                <td class="table__parameter">Вкус</td>
+                <td class="table__value">Рыба</td>
+              </tr>
+              <tr>
+                <td class="table__parameter">Цена</td>
+                <td class="table__value">1000 Р.</td>
+              </tr>
+            </table>
+            <a class="item__order button" href="#item-basket">Заказать</a>
+          </li>
+          <li class="catalog__item item">
+            <a class="item__link" href="#item">
+              <img class="item__picture" src="img/catalog5.img" width="140" height="144" alt="Cat Energy Slim 500 г">
+              <span class="item__caption">Cat Energy Slim 500 г</span>
+            </a>
+            <table class="item__table table">
+              <tr>
+                <td class="table__parameter">Объем</td>
+                <td class="table__value">500 г</td>
+              </tr>
+              <tr>
+                <td class="table__parameter">Вкус</td>
+                <td class="table__value">Гречка</td>
+              </tr>
+              <tr>
+                <td class="table__parameter">Цена</td>
+                <td class="table__value">400 Р.</td>
+              </tr>
+            </table>
+            <a class="item__order button" href="#item-basket">Заказать</a>
+          </li>
+          <li class="catalog__item item">
+            <a class="item__link" href="#item">
+              <img class="item__picture" src="img/catalog6.img" width="140" height="144" alt="Cat Energy Slim 1000 г">
+              <span class="item__caption">Cat Energy Slim 1000 г</span>
+            </a>
+            <table class="item__table table">
+              <tr>
+                <td class="table__parameter">Объем</td>
+                <td class="table__value">1000 г</td>
+              </tr>
+              <tr>
+                <td class="table__parameter">Вкус</td>
+                <td class="table__value">Гречка</td>
+              </tr>
+              <tr>
+                <td class="table__parameter">Цена</td>
+                <td class="table__value">700 Р.</td>
+              </tr>
+            </table>
+            <a class="item__order button" href="#item-basket">Заказать</a>
+          </li>
+          <li class="catalog__item item">
+            <a class="item__link" href="#item">
+              <img class="item__picture" src="img/catalog7.img" width="140" height="144" alt="Cat Energy Slim 500 г">
+              <span class="item__caption">Cat Energy Slim 500 г</span>
+            </a>
+            <table class="item__table table">
+              <tr>
+                <td class="table__parameter">Объем</td>
+                <td class="table__value">500 г</td>
+              </tr>
+              <tr>
+                <td class="table__parameter">Вкус</td>
+                <td class="table__value">Рис</td>
+              </tr>
+              <tr>
+                <td class="table__parameter">Цена</td>
+                <td class="table__value">500 Р.</td>
+              </tr>
+            </table>
+            <a class="item__order button" href="#item-basket">Заказать</a>
+          </li>
+          <li class="catalog__item item">
+            <h2 class="item__title">Показать еще 100500 товаров</h2>
+            <p class="item_description">На самом деле вкусов гораздо больше!</p>
+            <a class="item__order button button--all" href="">Показать все</a>
+          </li>
+        </ul>
+      </section>
 
     </main>
 
