Разметка каталога. Дополнительные товары

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -185,6 +185,32 @@
         </ul>
       </section>
 
+      <section class="additional">
+        <h2 class="additional__title">Дополнительные товары</h2>
+          <ul class="additional__list">
+            <li class="additional__item">
+              <h3 class="additional__caption">Сахарозаменитель</h3>
+              <span class="additional__volume">1 упаковка (100 г)</span>
+              <span class="additional__price">100 Р.</span>
+            </li>
+            <li class="additional__item">
+              <h3 class="additional__caption">Питьевая вода</h3>
+              <span class="additional__volume">5 литров</span>
+              <span class="additional__price">50 Р.</span>
+            </li>
+            <li class="additional__item">
+              <h3 class="additional__caption">Молоко</h3>
+              <span class="additional__volume">1 литр</span>
+              <span class="additional__price">100 Р.</span>
+            </li>
+            <li class="additional__item">
+              <h3 class="additional__caption">Витамины</h3>
+              <span class="additional__volume">1 упаковка (30 г)</span>
+              <span class="additional__price">300 Р.</span>
+            </li>
+          </ul>
+      </section>
+
     </main>
 
     <footer class="page-footer">
