--- a/source/catalog.html
+++ b/source/catalog.html
@@ -27,13 +27,14 @@
     </header>
 
     <main class="page-main">
+      <h1 class="visually-hidden">Продукция компании Cat Energy</h1>
       <section class="catalog">
-        <h1 class="catalog__title">Каталог продукции</h1>
+        <h2 class="catalog__title">Каталог продукции</h1>
         <ul class="catalog__list">
           <li class="catalog__item item">
             <a class="item__link" href="#item">
               <img class="item__picture" src="img/catalog1.img" width="140" height="144" alt="Cat Energy PRO 500 г">
-              <span class="item__caption">Cat Energy PRO 500 г</span>
+              <h3 class="item__caption">Cat Energy PRO 500 г</h3>
             </a>
             <table class="item__table table">
               <tr>
@@ -54,7 +55,7 @@
           <li class="catalog__item item">
             <a class="item__link" href="#item">
               <img class="item__picture" src="img/catalog2.img" width="140" height="144" alt="Cat Energy PRO 1000 г">
-              <span class="item__caption">Cat Energy PRO 1000 г</span>
+              <h3 class="item__caption">Cat Energy PRO 1000 г</h3>
             </a>
             <table class="item__table table">
               <tr>
@@ -75,7 +76,7 @@
           <li class="catalog__item item">
             <a class="item__link" href="#item">
               <img class="item__picture" src="img/catalog3.img" width="140" height="144" alt="Cat Energy PRO 500 г">
-              <span class="item__caption">Cat Energy PRO 500 г</span>
+              <h3 class="item__caption">Cat Energy PRO 500 г</h3>
             </a>
             <table class="item__table table">
               <tr>
@@ -96,7 +97,7 @@
           <li class="catalog__item item">
             <a class="item__link" href="#item">
               <img class="item__picture" src="img/catalog4.img" width="140" height="144" alt="Cat Energy PRO 1000 г">
-              <span class="item__caption">Cat Energy PRO 1000 г</span>
+              <h3 class="item__caption">Cat Energy PRO 1000 г</h3>
             </a>
             <table class="item__table table">
               <tr>
@@ -117,7 +118,7 @@
           <li class="catalog__item item">
             <a class="item__link" href="#item">
               <img class="item__picture" src="img/catalog5.img" width="140" height="144" alt="Cat Energy Slim 500 г">
-              <span class="item__caption">Cat Energy Slim 500 г</span>
+              <h3 class="item__caption">Cat Energy Slim 500 г</h3>
             </a>
             <table class="item__table table">
               <tr>
@@ -138,7 +139,7 @@
           <li class="catalog__item item">
             <a class="item__link" href="#item">
               <img class="item__picture" src="img/catalog6.img" width="140" height="144" alt="Cat Energy Slim 1000 г">
-              <span class="item__caption">Cat Energy Slim 1000 г</span>
+              <h3 class="item__caption">Cat Energy Slim 1000 г</h3>
             </a>
             <table class="item__table table">
               <tr>
@@ -159,7 +160,7 @@
           <li class="catalog__item item">
             <a class="item__link" href="#item">
               <img class="item__picture" src="img/catalog7.img" width="140" height="144" alt="Cat Energy Slim 500 г">
-              <span class="item__caption">Cat Energy Slim 500 г</span>
+              <h3 class="item__caption">Cat Energy Slim 500 г</h3>
             </a>
             <table class="item__table table">
               <tr>
@@ -190,23 +191,23 @@
           <ul class="additional__list">
             <li class="additional__item">
               <h3 class="additional__caption">Сахарозаменитель</h3>
-              <span class="additional__volume">1 упаковка (100 г)</span>
-              <span class="additional__price">100 Р.</span>
+              <p class="additional__volume">1 упаковка (100 г)</p>
+              <p class="additional__price">100 Р.</p>
             </li>
             <li class="additional__item">
               <h3 class="additional__caption">Питьевая вода</h3>
-              <span class="additional__volume">5 литров</span>
-              <span class="additional__price">50 Р.</span>
+              <p class="additional__volume">5 литров</p>
+              <p class="additional__price">50 Р.</sp>
             </li>
             <li class="additional__item">
               <h3 class="additional__caption">Молоко</h3>
-              <span class="additional__volume">1 литр</span>
-              <span class="additional__price">100 Р.</span>
+              <p class="additional__volume">1 литр</p>
+              <p class="additional__price">100 Р.</p>
             </li>
             <li class="additional__item">
               <h3 class="additional__caption">Витамины</h3>
-              <span class="additional__volume">1 упаковка (30 г)</span>
-              <span class="additional__price">300 Р.</span>
+              <p class="additional__volume">1 упаковка (30 г)</p>
+              <p class="additional__price">300 Р.</p>
             </li>
           </ul>
       </section>
