--- a/source/catalog.html
+++ b/source/catalog.html
@@ -210,6 +210,9 @@
               <p class="additional__price">300 Р.</p>
             </li>
           </ul>
+          <div class="additional__offer">
+            <p class="additional__offer-title">Закажите все и получите чехол для кота в подарок!</p>
+          </div>
       </section>
 
     </main>
