Разметка каталога. Валидатор, БЭМ

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -7,17 +7,17 @@
   <body>
 
     <header class="page-header">
-      <a class="page-header__logo logo-header">
+      <a class="page-header__logo logo-header" href="index.html">
         <img class="page-header__logo-image" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип компании Cat Energy">
       </a>
       <nav class="page-header__nav main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--active">
-            <a class="main-nav__link main-nav__link--active">Главная</a>
-          </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
+            <a class="main-nav__link">Главная</a>
+          </li>
+          <li class="main-nav__item main-nav__item--active">
+            <a class="main-nav__link main-nav__link--active" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="form.html">Подбор программы</a>
@@ -29,7 +29,7 @@
     <main class="page-main">
       <h1 class="visually-hidden">Продукция компании Cat Energy</h1>
       <section class="catalog">
-        <h2 class="catalog__title">Каталог продукции</h1>
+        <h2 class="catalog__title">Каталог продукции</h2>
         <ul class="catalog__list">
           <li class="catalog__item item">
             <a class="item__link" href="#item">
@@ -179,7 +179,7 @@
             <a class="item__order button" href="#item-basket">Заказать</a>
           </li>
           <li class="catalog__item item">
-            <h2 class="item__title">Показать еще 100500 товаров</h2>
+            <h3 class="item__title">Показать еще 100500 товаров</h3>
             <p class="item_description">На самом деле вкусов гораздо больше!</p>
             <a class="item__order button button--all" href="">Показать все</a>
           </li>
@@ -197,7 +197,7 @@
             <li class="additional__item">
               <h3 class="additional__caption">Питьевая вода</h3>
               <p class="additional__volume">5 литров</p>
-              <p class="additional__price">50 Р.</sp>
+              <p class="additional__price">50 Р.</p>
             </li>
             <li class="additional__item">
               <h3 class="additional__caption">Молоко</h3>
@@ -214,7 +214,6 @@
             <p class="additional__offer-title">Закажите все и получите чехол для кота в подарок!</p>
           </div>
       </section>
-
     </main>
 
     <footer class="page-footer">
