Разметка. Убрал лишние модификаторы.

--- a/source/form.html
+++ b/source/form.html
@@ -7,20 +7,20 @@
   <body>
 
     <header class="page-header">
-      <a class="page-header__logo logo-header">
+      <a class="page-header__logo logo-header" href="index.html">
         <img class="page-header__logo-image" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип компании Cat Energy">
       </a>
       <nav class="page-header__nav main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--active">
-            <a class="main-nav__link main-nav__link--active">Главная</a>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="form.html">Подбор программы</a>
+            <a class="main-nav__link main-nav__link--active">Подбор программы</a>
           </li>
         </ul>
       </nav>
