--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
       <nav class="page-header__nav main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--active">
+          <li class="main-nav__item">
             <a class="main-nav__link main-nav__link--active">Главная</a>
           </li>
           <li class="main-nav__item">
