--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,7 +9,7 @@
 
     <header class="page-header">
       <a class="page-header__logo logo-header" href="index.html">
-        <img class="page-header__logo-image" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип компании Cat Energy">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" height="38" alt="Логотип компании Cat Energy">
       </a>
       <nav class="page-header__nav main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -34,7 +34,7 @@
         <ul class="catalog__list">
           <li class="catalog__item item">
             <a class="item__link" href="#item">
-              <img class="item__picture" src="img/catalog1.img" width="140" height="144" alt="Cat Energy PRO 500 г">
+              <img class="item__picture" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
               <h3 class="item__caption">Cat Energy PRO 500 г</h3>
             </a>
             <table class="item__table table">
@@ -55,7 +55,7 @@
           </li>
           <li class="catalog__item item">
             <a class="item__link" href="#item">
-              <img class="item__picture" src="img/catalog2.img" width="140" height="144" alt="Cat Energy PRO 1000 г">
+              <img class="item__picture" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
               <h3 class="item__caption">Cat Energy PRO 1000 г</h3>
             </a>
             <table class="item__table table">
@@ -76,7 +76,7 @@
           </li>
           <li class="catalog__item item">
             <a class="item__link" href="#item">
-              <img class="item__picture" src="img/catalog3.img" width="140" height="144" alt="Cat Energy PRO 500 г">
+              <img class="item__picture" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
               <h3 class="item__caption">Cat Energy PRO 500 г</h3>
             </a>
             <table class="item__table table">
@@ -97,7 +97,7 @@
           </li>
           <li class="catalog__item item">
             <a class="item__link" href="#item">
-              <img class="item__picture" src="img/catalog4.img" width="140" height="144" alt="Cat Energy PRO 1000 г">
+              <img class="item__picture" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
               <h3 class="item__caption">Cat Energy PRO 1000 г</h3>
             </a>
             <table class="item__table table">
@@ -118,7 +118,7 @@
           </li>
           <li class="catalog__item item">
             <a class="item__link" href="#item">
-              <img class="item__picture" src="img/catalog5.img" width="140" height="144" alt="Cat Energy Slim 500 г">
+              <img class="item__picture" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
               <h3 class="item__caption">Cat Energy Slim 500 г</h3>
             </a>
             <table class="item__table table">
@@ -139,7 +139,7 @@
           </li>
           <li class="catalog__item item">
             <a class="item__link" href="#item">
-              <img class="item__picture" src="img/catalog6.img" width="140" height="144" alt="Cat Energy Slim 1000 г">
+              <img class="item__picture" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 1000 г">
               <h3 class="item__caption">Cat Energy Slim 1000 г</h3>
             </a>
             <table class="item__table table">
@@ -160,7 +160,7 @@
           </li>
           <li class="catalog__item item">
             <a class="item__link" href="#item">
-              <img class="item__picture" src="img/catalog7.img" width="140" height="144" alt="Cat Energy Slim 500 г">
+              <img class="item__picture" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
               <h3 class="item__caption">Cat Energy Slim 500 г</h3>
             </a>
             <table class="item__table table">
@@ -225,11 +225,11 @@
       </div>
 
       <div class="page-footer__map">
-        <img src="img/map.png" width="320" height="400" alt="Местонахождение магазина на карте">
+        <img src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Местонахождение магазина на карте">
       </div>
 
       <a class="page-footer__logo logo-footer">
-        <img class="page-footer__logo-image" width="128" height="24" src="img/footer-logo.svg" alt="Логотип компании Cat Energy">
+        <img class="page-footer__logo-image" width="128" height="24" src="img/logo-footer.svg" alt="Логотип компании Cat Energy">
       </a>
 
       <div class="page-footer__social social">
