--- a/source/form.html
+++ b/source/form.html
@@ -9,7 +9,7 @@
 
     <header class="page-header">
       <a class="page-header__logo logo-header" href="index.html">
-        <img class="page-header__logo-image" src="img/logo-mobile-header.svg" width="101" height="18" alt="Логотип компании Cat Energy">
+        <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" height="38" alt="Логотип компании Cat Energy">
       </a>
       <nav class="page-header__nav main-nav">
         <button class="main-nav__toggle" type="button">Открыть меню</button>
@@ -107,11 +107,11 @@
       </div>
 
       <div class="page-footer__map">
-        <img src="img/map.png" width="320" height="400" alt="Местонахождение магазина на карте">
+        <img src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Местонахождение магазина на карте">
       </div>
 
       <a class="page-footer__logo logo-footer">
-        <img class="page-footer__logo-image" width="128" height="24" src="img/footer-logo.svg" alt="Логотип компании Cat Energy">
+        <img class="page-footer__logo-image" width="128" height="24" src="img/logo-footer.svg" alt="Логотип компании Cat Energy">
       </a>
 
       <div class="page-footer__social social">
