--- a/source/catalog.html
+++ b/source/catalog.html
@@ -180,7 +180,7 @@
             <a class="item__order button" href="#item-basket">Заказать</a>
           </li>
           <li class="catalog__item item">
-            <h3 class="item__title">Показать еще 100500 товаров</h3>
+            <h3 class="item__caption">Показать еще 100500 товаров</h3>
             <p class="item_description">На самом деле вкусов гораздо больше!</p>
             <a class="item__order button button--all" href="">Показать все</a>
           </li>
@@ -194,21 +194,25 @@
               <h3 class="additional__caption">Сахарозаменитель</h3>
               <p class="additional__volume">1 упаковка (100 г)</p>
               <p class="additional__price">100 Р.</p>
+              <a class="additional__order button" href="#item-basket">Заказать</a>
             </li>
             <li class="additional__item">
               <h3 class="additional__caption">Питьевая вода</h3>
               <p class="additional__volume">5 литров</p>
               <p class="additional__price">50 Р.</p>
+              <a class="additional__order button" href="#item-basket">Заказать</a>
             </li>
             <li class="additional__item">
               <h3 class="additional__caption">Молоко</h3>
               <p class="additional__volume">1 литр</p>
               <p class="additional__price">100 Р.</p>
+              <a class="additional__order button" href="#item-basket">Заказать</a>
             </li>
             <li class="additional__item">
               <h3 class="additional__caption">Витамины</h3>
               <p class="additional__volume">1 упаковка (30 г)</p>
               <p class="additional__price">300 Р.</p>
+              <a class="additional__order button" href="#item-basket">Заказать</a>
             </li>
           </ul>
           <div class="additional__offer">
@@ -235,13 +239,13 @@
       <div class="page-footer__social social">
         <ul class="social__list">
           <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="#vkontakte">Мы в Вконтакте</a>
+            <a class="social__link social__link--vkontakte" href="#vkontakte"><span class="visually-hidden">Мы в Вконтакте</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--instagram" href="#instagram">Мы в инстаграме</a>
+            <a class="social__link social__link--instagram" href="#instagram"><span class="visually-hidden">Мы в инстаграме</span></a>
           </li>
           <li class="social__item">
-            <a class="social__link social__link--facebook" href="#facebook">Мы в Фейсбуке</a>
+            <a class="social__link social__link--facebook" href="#facebook"><span class="visually-hidden">Мы в Фейсбуке</span></a>
           </li>
         </ul>
       </div>
