Начальная верстка. Поменял названия классов в форме (почта и телефон).

--- a/source/form.html
+++ b/source/form.html
@@ -61,13 +61,13 @@
         </fieldset>
         <fieldset class="form__block form__block--contacts">
           <legend class="form__block-title">Контактные данные (владельца кота)</legend>
-          <p class="form__item input-email">
-            <label class="input-email__label" for="form-email">E-mail:*</label>
-            <input class="input-email__input" type="email" id="form-email" name="email" placeholder="kuklachev@gmail.com">
+          <p class="form__item input-text">
+            <label class="input-text__label" for="form-email">E-mail:*</label>
+            <input class="input-text__input" type="email" id="form-email" name="email" placeholder="kuklachev@gmail.com">
           </p>
-          <p class="form__item input-tel">
-            <label class="input-tel__label" for="form-tel">Телефон:*</label>
-            <input class="input-tel__input" type="tel" id="form-tel" name="telephone" placeholder="8 (960) 900-60-90">
+          <p class="form__item input-text">
+            <label class="input-text__label" for="form-tel">Телефон:*</label>
+            <input class="input-text__input" type="tel" id="form-tel" name="telephone" placeholder="8 (960) 900-60-90">
           </p>
         </fieldset>
         <fieldset class="form__block form__block--comment">
