--- a/source/index.html
+++ b/source/index.html
@@ -30,28 +30,31 @@
 
     <main class="page-main">
       <h1 class="visually-hidden">Cat Energy - магазин питания для котов</h1>
-
       <section class="programs">
         <header class="programs__header">
+          <div class="container">
             <h2 class="programs__title">Функциональное питание для котов</h2>
             <p class="programs__slogan">Занялся собой? Займись котом!</p>
             <img class="programs__picture" src="img/index-can-mobile@1x.png" width="280" height="271" alt="Корм Cat Energy">
             <a class="programs__form-link button" href="form.html">Подобрать программу</a>
+          </div>
         </header>
         <section class="programs__list program-types">
           <h2 class="visually-hidden">Программы питания для котов</h2>
-          <ul class="program-types__list">
-            <li class="program-types__item program-types__item--loss">
-              <h3 class="program-types__title">Похудение</h3>
-              <p class="program-types__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-              <a class="program-types__link" href="catalog-slim.html">Каталог Slim</a>
-            </li>
-            <li class="program-types__item program-types__item--mass">
-              <h3 class="program-types__title">Набор массы</h3>
-              <p class="program-types__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-              <a class="program-types__link" href="catalog-pro.html">Каталог Pro</a>
-            </li>
-          </ul>
+          <div class="container">
+            <ul class="program-types__list">
+              <li class="program-types__item program-types__item--loss">
+                <h3 class="program-types__title">Похудение</h3>
+                <p class="program-types__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+                <a class="program-types__link" href="catalog-slim.html">Каталог Slim</a>
+              </li>
+              <li class="program-types__item program-types__item--mass">
+                <h3 class="program-types__title">Набор массы</h3>
+                <p class="program-types__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
+                <a class="program-types__link" href="catalog-pro.html">Каталог Pro</a>
+              </li>
+            </ul>
+          </div>
         </section>
       </section>
 
