--- a/source/index.html
+++ b/source/index.html
@@ -59,21 +59,23 @@
       </section>
 
       <section class="features">
-        <h2 class="features__title">Как это работает</h2>
-        <ul class="features__list">
-          <li class="features__item features__item--nutrients">
-            <p class="features__text">Функциональное питание содержит только полезные питательные вещества.</p>
-          </li>
-          <li class="features__item features__item--powder">
-            <p class="features__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
-          </li>
-          <li class="features__item features__item--eating">
-            <p class="features__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
-          </li>
-          <li class="features__item features__item--month">
-            <p class="features__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="features__title">Как это работает</h2>
+          <ul class="features__list">
+            <li class="features__item features__item--nutrients">
+              <p class="features__text">Функциональное питание содержит только полезные питательные вещества.</p>
+            </li>
+            <li class="features__item features__item--powder">
+              <p class="features__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
+            </li>
+            <li class="features__item features__item--eating">
+              <p class="features__text">Замените один-два приема обычной еды на наше функциональное питание.</p>
+            </li>
+            <li class="features__item features__item--month">
+              <p class="features__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="example">
