Адаптивная сетка. Раздел примера.

--- a/source/index.html
+++ b/source/index.html
@@ -79,23 +79,31 @@
       </section>
 
       <section class="example">
-        <h2 class="example__title">Живой пример</h2>
-        <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
-        <p class="example__weight">
-          <span class="example__value">5 кг</span>
-          <span class="example__parameter">снижение веса</span>
-        </p>
-        <p class="example__period">
-          <span class="example__value">60 дней</span>
-          <span class="example__parameter">затрачено времени</span>
-        </p>
-        <p class="example__description">Затраты на питание: 15 000 руб.</p>
-        <img class="example__before" src="img/before-mobile@1x.png" width="311" height="232" alt="Кот до похудения">
-        <p class="example__live">
-          <button class="example__toggle" type="button">Было</button>
-          <input type="checkbox" id="exapmle-checkbox" name="example">
-          <button class="example__toggle" type="button">Стало</button>
-        </p>
+        <!-- <div class="container"> -->
+          <div class="example__wrapper-big">
+            <h2 class="example__title">Живой пример</h2>
+            <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
+            <div class="example__wrapper-small">
+              <p class="example__weight">
+                <span class="example__value">5 кг</span>
+                <span class="example__parameter">снижение веса</span>
+              </p>
+              <p class="example__period">
+                <span class="example__value">60 дней</span>
+                <span class="example__parameter">затрачено времени</span>
+              </p>
+              <p class="example__description">Затраты на питание: 15 000 руб.</p>
+            </div>
+          </div>
+          <div class="example__wrapper-big">
+            <img class="example__before" src="img/before-mobile@1x.png" width="311" height="232" alt="Кот до похудения">
+            <p class="example__live">
+              <button class="example__toggle" type="button">Было</button>
+              <input type="checkbox" id="exapmle-checkbox" name="example">
+              <button class="example__toggle" type="button">Стало</button>
+            </p>
+          </div>
+        <!-- </div> -->
       </section>
     </main>
 
