--- a/source/catalog.html
+++ b/source/catalog.html
@@ -192,27 +192,35 @@
         <h2 class="additional__title">Дополнительные товары</h2>
           <ul class="additional__list">
             <li class="additional__item">
-              <h3 class="additional__caption">Сахарозаменитель</h3>
-              <p class="additional__volume">1 упаковка (100 г)</p>
-              <p class="additional__price">100 Р.</p>
+              <div class="additional__item-wrapper">
+                <h3 class="additional__caption">Сахарозаменитель</h3>
+                <p class="additional__volume">1 упаковка (100 г)</p>
+                <p class="additional__price">100 Р.</p>
+              </div>
               <a class="additional__order button" href="#item-basket">Заказать</a>
             </li>
             <li class="additional__item">
-              <h3 class="additional__caption">Питьевая вода</h3>
-              <p class="additional__volume">5 литров</p>
-              <p class="additional__price">50 Р.</p>
+              <div class="additional__item-wrapper">
+                <h3 class="additional__caption">Питьевая вода</h3>
+                <p class="additional__volume">5 литров</p>
+                <p class="additional__price">50 Р.</p>
+              </div>
               <a class="additional__order button" href="#item-basket">Заказать</a>
             </li>
             <li class="additional__item">
-              <h3 class="additional__caption">Молоко</h3>
-              <p class="additional__volume">1 литр</p>
-              <p class="additional__price">100 Р.</p>
+              <div class="additional__item-wrapper">
+                <h3 class="additional__caption">Молоко</h3>
+                <p class="additional__volume">1 литр</p>
+                <p class="additional__price">100 Р.</p>
+              </div>
               <a class="additional__order button" href="#item-basket">Заказать</a>
             </li>
             <li class="additional__item">
-              <h3 class="additional__caption">Витамины</h3>
-              <p class="additional__volume">1 упаковка (30 г)</p>
-              <p class="additional__price">300 Р.</p>
+              <div class="additional__item-wrapper">
+                <h3 class="additional__caption">Витамины</h3>
+                <p class="additional__volume">1 упаковка (30 г)</p>
+                <p class="additional__price">300 Р.</p>
+              </div>
               <a class="additional__order button" href="#item-basket">Заказать</a>
             </li>
           </ul>
