--- a/source/index.html
+++ b/source/index.html
@@ -11,9 +11,9 @@
     <header class="page-header">
       <a class="page-header__logo logo-header">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" height="38" alt="Логотип компании Cat Energy">
+        <button class="page-header__nav-toggle" type="button"><span class=" visually-hidden">Открыть меню</span></button>
       </a>
       <nav class="page-header__nav main-nav">
-        <button class="main-nav__toggle visually-hidden" type="button">Открыть меню</button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
             <a class="main-nav__link main-nav__link--active">Главная</a>
