--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,7 +9,7 @@
   <body>
 
     <header class="page-header">
-      <a class="page-header__logo logo-header">
+      <a class="page-header__logo logo-header" href="index.html">
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" height="38" alt="Логотип компании Cat Energy">
         <button class="page-header__nav-toggle" type="button"><span class=" visually-hidden">Открыть меню</span></button>
       </a>
