--- a/source/index.html
+++ b/source/index.html
@@ -116,7 +116,7 @@
         <img src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Местонахождение магазина на карте">
       </div>
 
-      <div class="footer__wrapper">
+      <div class="page-footer__wrapper">
         <a class="page-footer__logo logo-footer">
           <img class="page-footer__logo-image" width="128" height="24" src="img/logo-footer.svg" alt="Логотип компании Cat Energy">
         </a>
