Верстка. Главная страница промо раздел.

--- a/source/index.html
+++ b/source/index.html
@@ -32,7 +32,7 @@
       <h1 class="visually-hidden">Cat Energy - магазин питания для котов</h1>
       <section class="programs">
         <header class="programs__header">
-          <div class="container">
+          <div class="programs__header-wrapper">
             <h2 class="programs__title">Функциональное питание для котов</h2>
             <p class="programs__slogan">Занялся собой? Займись котом!</p>
             <img class="programs__picture" src="img/index-can-mobile@1x.png" width="280" height="271" alt="Корм Cat Energy">
