Верстка. Каталог. Сделал одну дополнительную карточку.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -219,10 +219,12 @@
         <h2 class="additional__title">Дополнительные товары</h2>
           <ul class="additional__list">
             <li class="additional__item">
-              <div class="additional__item-wrapper">
+              <div class="additional__wrapper-item">
                 <h3 class="additional__caption">Сахарозаменитель</h3>
-                <p class="additional__volume">1 упаковка (100 г)</p>
-                <p class="additional__price">100 Р.</p>
+                <p class="additional__wrapper-cost">
+                  <span class="additional__volume">1 упаковка (100 г)</span>
+                  <span class="additional__price">100 Р.</span>
+                </p>
               </div>
               <a class="additional__order button" href="#item-basket">Заказать</a>
             </li>
