ПП. Главная страница планшетная версия.

--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,9 @@
         <img class="page-header__logo-image" src="img/logo-mobile.svg" width="200" alt="Логотип компании Cat Energy">
       </a>
       <nav class="page-header__nav main-nav">
-        <button class="page-header__nav-toggle" type="button"><span class=" visually-hidden">Открыть меню</span></button>
+        <button class="page-header__nav-toggle" type="button">
+          <span class=" visually-hidden">Открыть меню</span>
+        </button>
         <ul class="main-nav__list">
           <li class="main-nav__item">
             <a class="main-nav__link main-nav__link--active">Главная</a>
@@ -91,16 +93,19 @@
                 </li>
               </ul>
               <p class="example__description">
-                <span class="example__description-text">Затраты на питание:</span><span class="example__description-number"> 15 000 руб.</span>
+                <span class="example__description-text">Затраты на питание:</span>
+                <span class="example__description-number"> 15 000 руб.</span>
               </p>
             </div>
           </div>
-          <div class="example__wrapper-big">
+          <div class="example__wrapper-big example__wrapper-big--slider">
             <img class="example__before" src="img/before-mobile@1x.png" width="320" height="240" alt="Кот до похудения">
             <div class="example__range-control">
               <button class="example__toggle" type="button">Было</button>
               <div class="example__range-scale" >
-                <div class="example__range-bar"></div>
+                <div class="example__range-bar">
+                  <div class="example__range-point"></div>
+                </div>
               </div>
               <button class="example__toggle" type="button">Стало</button>
             </div>
@@ -113,7 +118,10 @@
       <h2 class="visually-hidden">Контакты</h2>
       <div class="page-footer__contacts contacts contacts--white">
         <p class="contacts__text">Приглашаем к&nbsp;сотрудничеству дилеров!</p>
-        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+        <p class="contacts__address">
+          <span class="contacts__address-street">ул. Большая Конюшенная, д. 19/8</span>
+          <span class="contacts__address-city">Санкт-Петербург</span>
+        </p>
       </div>
 
       <div class="page-footer__map">
@@ -128,13 +136,19 @@
         <div class="page-footer__social social">
           <ul class="social__list">
             <li class="social__item social__item--vkontakte">
-              <a class="social__link social__link--vkontakte" href="#vkontakte"><span class="visually-hidden">Мы в Вконтакте</span></a>
+              <a class="social__link social__link--vkontakte" href="#vkontakte">
+                <span class="visually-hidden">Мы в Вконтакте</span>
+              </a>
             </li>
             <li class="social__item social__item--instagram">
-              <a class="social__link social__link--instagram" href="#instagram"><span class="visually-hidden">Мы в инстаграме</span></a>
+              <a class="social__link social__link--instagram" href="#instagram">
+                <span class="visually-hidden">Мы в инстаграме</span>
+              </a>
             </li>
             <li class="social__item social__item--facebook">
-              <a class="social__link social__link--facebook" href="#facebook"><span class="visually-hidden">Мы в Фейсбуке</span></a>
+              <a class="social__link social__link--facebook" href="#facebook">
+                <span class="visually-hidden">Мы в Фейсбуке</span>
+              </a>
             </li>
           </ul>
         </div>
