ПП. Главная все версии.

--- a/source/index.html
+++ b/source/index.html
@@ -78,36 +78,38 @@
 
       <section class="example">
         <div class="example__wrapper">
-          <div class="example__wrapper-big example__wrapper-big--description">
-            <h2 class="example__title">Живой пример</h2>
-            <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по&#8209;прежнему спит по 16 часов в день.</p>
-            <div class="example__wrapper-small">
-              <ul class="example__list">
-                <li class="example__item example__weight">
-                  <span class="example__value">5 кг</span>
-                  <span class="example__parameter">снижение веса</span>
-                </li>
-                <li class="example__item example__period">
-                  <span class="example__value">60 дней</span>
-                  <span class="example__parameter">затрачено времени</span>
-                </li>
-              </ul>
-              <p class="example__description">
-                <span class="example__description-text">Затраты на питание:</span>
-                <span class="example__description-number"> 15 000 руб.</span>
-              </p>
-            </div>
-          </div>
-          <div class="example__wrapper-big example__wrapper-big--slider">
-            <img class="example__before" src="img/before-mobile@1x.png" width="320" height="240" alt="Кот до похудения">
-            <div class="example__range-control">
-              <button class="example__toggle" type="button">Было</button>
-              <div class="example__range-scale" >
-                <div class="example__range-bar">
-                  <div class="example__range-point"></div>
-                </div>
+          <h2 class="example__title">Живой пример</h2>
+          <div class="example__wrapper-inner">
+            <div class="example__wrapper-big example__wrapper-big--description">
+              <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по&#8209;прежнему спит по 16 часов в день.</p>
+              <div class="example__wrapper-small">
+                <ul class="example__list">
+                  <li class="example__item example__weight">
+                    <span class="example__value">5 кг</span>
+                    <span class="example__parameter">снижение веса</span>
+                  </li>
+                  <li class="example__item example__period">
+                    <span class="example__value">60 дней</span>
+                    <span class="example__parameter">затрачено времени</span>
+                  </li>
+                </ul>
+                <p class="example__description">
+                  <span class="example__description-text">Затраты на питание:</span>
+                  <span class="example__description-number"> 15 000 руб.</span>
+                </p>
               </div>
-              <button class="example__toggle" type="button">Стало</button>
+            </div>
+            <div class="example__wrapper-big example__wrapper-big--slider">
+              <img class="example__before" src="img/before-mobile@1x.png" width="320" height="240" alt="Кот до похудения">
+              <div class="example__range-control">
+                <button class="example__toggle" type="button">Было</button>
+                <div class="example__range-scale" >
+                  <div class="example__range-bar">
+                    <div class="example__range-point"></div>
+                  </div>
+                </div>
+                <button class="example__toggle" type="button">Стало</button>
+              </div>
             </div>
           </div>
         </div>
