ПП. Каталог планшетная версия.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -239,7 +239,7 @@
             </div>
           </li>
           <li class="catalog__item item item--more">
-            <div class="item__wrapper">
+            <div class="item__wrapper item__wrapper--more">
               <!-- <div class="item__wrapper-inner item__wrapper-inner--more"> -->
                 <div class="item__wrapper-caption item__wrapper-caption--more">
                   <a href="#item">
@@ -313,7 +313,7 @@
 
     <footer class="page-footer">
       <h2 class="visually-hidden">Контакты</h2>
-      <div class="page-footer__contacts contacts contacts--white">
+      <div class="page-footer__contacts contacts">
         <p class="contacts__text">Приглашаем к&nbsp;сотрудничеству дилеров!</p>
         <p class="contacts__address">
           <span class="contacts__address-street">ул. Большая Конюшенная, д. 19/8</span>
