ПП. Каталог десктопная версия.

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -305,7 +305,9 @@
             </li>
           </ul>
           <div class="additional__offer">
-            <p class="additional__offer-title">Закажите все и&nbsp;получите чехол для кота в подарок!</p>
+            <div class="additional__offer-wraper">
+              <p class="additional__offer-title">Закажите все и&nbsp;получите чехол для кота в подарок!</p>
+            </div>
           </div>
         </div>
       </section>
